--- a/landing_page.css
+++ b/landing_page.css
@@ -1,54 +1,272 @@
-*{
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
+*,.sedan-regular {
+        font-family: "Sedan", serif;
+        font-weight: 400;
+        font-style: normal;
+      }
+      
+      .sedan-regular-italic {
+        font-family: "Sedan", serif;
+        font-weight: 400;
+        font-style: italic;
+      }
 
-main {
-    margin-left: 12rem;
-    height:100vh;
-}
-
+.jacquard-24-regular {
+        font-family: "Jacquard 24", system-ui;
+        font-weight: 400;
+        font-style: normal;
+      }
+      
 body{
-    background-color:rgb(238, 247, 247);
+    margin: 0;
+    padding: 0;
+    background-color: rgba(225, 190, 231);
+    height: 70vh;
 }
 
-nav {
-    background-color: rgba(16, 16, 129, 0.952);
-    color: rgb(238, 247, 247);
-    padding:0;
-    width: 5em;
-    height: 100vh;
-    position: fixed;
+/*NavBar and Accent Section*/
+.accent-div{
+    background-color:whitesmoke;
+    text-decoration:hidden;
+    margin:0;
+    padding:2px;
+}
+
+/*Page Link Section*/
+.link-container{
+    margin: 0px;
+    padding: 0px;
+}
+
+li{
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.panel-wrapper{
+    width: 650px;
+    height:600px;
+    margin: 100px auto;
+    position: relative;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+.panel-wrapper img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 5px;
+}
+
+.panel-wrapper:hover img{
+    transform:scale(1.2);
+    transition: 0.3s;
+}
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
     display: flex;
-    cursor:pointer;
+    justify-content: center;
+    align-items: center;
+    border-radius: 5px;
+    transition:opacity 0.3s;
 }
 
-nav .nav_container{
+.panel-wrapper:hover .overlay{
+    background-color: #2626263d;
+    opacity: 1;
+}
+
+.panel-text{
+    color: #262626;
+    font-size: 40px;
+    font-weight: bold;
+    text-align: center;
+    padding:20px;
+}
+
+/*Subscription Section*/
+.subscription-container{
+    background-color: rgba(186, 104, 200, 0.605);
+    color: whitesmoke;
+    padding: 50px;
+    display: flex;
+    flex-wrap:wrap;
+    flex-direction: row;
+    justify-self: center;
+    justify-content: space-evenly;
+    text-align: center;
+    width: 100%;
+    height: 250px auto;
+}
+.sub-email-container{
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    flex-wrap:wrap ;
+    text-align: center;
+}
+
+.email-input{
+    height: 40px;
+    display: flex;
+    justify-content: center;
+}
+.email-input i{
+    background-color:rgba(4, 4, 4, 0.779);
+    color: whitesmoke;
+    width: 40px;
+    line-height: 40px;
+    border-radius: 5px;
+}
+
+.ebox,.btn{
+    border: none;
+    outline:none;
+}
+
+.ebox{
+    width: 0;
+    transition: 0.6s;
+    visibility: hidden;
+}
+
+.email-input:hover > .ebox,.ebox:focus{
+    width: 260px;
+    visibility: visible;
+    padding:0 10px;
+}
+
+.btn{
+    background-color: rgba(4, 4, 4, 0.779);
+    color: whitesmoke;
+    text-transform: capitalize;
+    padding: 0 10px;
+    cursor: pointer;
+    border-radius: 5px;
+}
+
+.sub-platform{
+    display:flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    flex-wrap: wrap;
+    text-align: center;
+}
+
+.icon-links{
+    color: #fff;
+    font-size: 40px;
+    display:flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+i:hover{
+    transform: scale(1.3);
+}
+
+/*User Review Section*/
+.review-container{
+    margin-top:5%;
+    padding: 10px;
+}
+
+.card {
+    width: 100%;
+    height: 300px;
+    transform-style: preserve-3d;
+    perspective: 500px;
+    border: none;
+    background-color: inherit;
+}
+
+.card .box {
+    position: absolute;
+    color: #fff;
+    width: 100%;
+    height: 100%;
+    box-shadow: 0 15px 35px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
+    background: #262626;
+    transform-style: preserve-3d;
+    transition: 0.5s;
+    backface-visibility: hidden;
+}
+
+.card .box.front,
+.card .box.back {
+    position: absolute;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    padding: 1em;
-    margin: 0;
+    align-items: center;
+    justify-content: center;
 }
 
+.card .box.front img {
+	width: 120px;
+	height: 120px;
+	border-radius: 50%;
+	object-fit: cover;
+	border: 5px solid #fff;
+	margin-bottom: 25px;
+}
 
-nav:hover{
-    width:12rem;
+.card:hover .box.front {
+    transform: rotateY(180deg);
+}
+.box.front h2 {
+	font-family: "Sedan", serif;
+}
+.box.front h4 {
+	font-size: 18px;
+	letter-spacing: 2px;
+}
+
+.card .box.back {
+    position: absolute;
+    background: #262626;
+    transform: rotateY(180deg);
+    padding: 20px 30px;
+    text-align: center;
+    user-select: none;
+}
+
+.card .box.back .fa-quote-left {
+	position: absolute;
+	top: 25px;
+	left: 180px;
+	font-size: 3.2rem;
+}
+
+.card:hover .box.back {
+    transform: rotateY(360deg);
+}
+
+@media(max-width: 991.5px) {
+    .col-lg-4 {
+        margin-top: 40px;
+        margin-bottom: 20px;
     }
-
-nav .nav_container .nav_li{
-    display: flex;
-    list-style-type: none;
 }
 
-nav a {
-    color:rgb(238, 247, 247);
-    font-weight: 400;
-    padding: 1rem;
-    text-decoration: none;
+/*About Host Section*/
+.bio-container{
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 50px;
+    margin: 10px;
 }
 
-#settings{
-    display: flex;
-    justify-content: flex-end;
-    flex:5;
+footer{
+    background-color: #262626;
+    color: #fff;
 }
