--- a/landing_page.css
+++ b/landing_page.css
@@ -1,3 +1,5 @@
+ 
+
 *,.sedan-regular {
         font-family: "Sedan", serif;
         font-weight: 400;
@@ -17,13 +19,18 @@
       }
       
 body{
-    margin: 0;
-    padding: 0;
     background-color: rgba(225, 190, 231);
     height: 70vh;
 }
 
 /*NavBar and Accent Section*/
+ul{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: end;
+    width: 100%;
+}
 .accent-div{
     background-color:whitesmoke;
     text-decoration:hidden;
@@ -33,10 +40,19 @@ body{
 
 /*Page Link Section*/
 .link-container{
-    margin: 0px;
-    padding: 0px;
+    margin: 10px;
+    padding: 10px;
 }
 
+.link-container > ul{
+    padding: 50px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    width: 100%;
+
+}
 li{
     list-style: none;
     margin: 0;
@@ -101,8 +117,8 @@ li{
     justify-self: center;
     justify-content: space-evenly;
     text-align: center;
-    width: 100%;
-    height: 250px auto;
+    margin: 10px;
+    padding: 10px;
 }
 .sub-email-container{
     display:flex;
@@ -262,8 +278,15 @@ i:hover{
     flex-wrap: wrap;
     justify-content: space-evenly;
     align-items: center;
-    padding: 50px;
     margin: 10px;
+    padding: 10px;
+}
+
+.bio-container h2{
+    font-size: 100px;;
+    text-align: center;
+    font-weight: 400;
+    margin-top: 50px;
 }
 
 footer{
