--- a/episode-list.css
+++ b/episode-list.css
@@ -1,21 +1,39 @@
+ 
+
+*,.sedan-regular {
+    font-family: "Sedan", serif;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
+  .sedan-regular-italic {
+    font-family: "Sedan", serif;
+    font-weight: 400;
+    font-style: italic;
+  }
+
+.jacquard-24-regular {
+    font-family: "Jacquard 24", system-ui;
+    font-weight: 400;
+    font-style: normal;
+  }
+  
 body{
-    background-color: rgba(251, 226, 255, 0.735);
+background-color: rgba(225, 190, 231);
+height: 70vh;
 }
 
+/*NavBar and Accent Section*/
+ul{
+display: flex;
+flex-direction: row;
+flex-wrap: wrap;
+justify-content: end;
+width: 100%;
+}
 .accent-div{
-    background-color: darkorchid;
-    text-decoration:hidden;
-}
-
-.page-title{
-    margin-top: 35px;
-    margin-bottom: 35px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-}
-
-.title{
-    font-size: x-large;
-    font-weight: 600;
+background-color:whitesmoke;
+text-decoration:hidden;
+margin:0;
+padding:2px;
 }
