--- a/shop.css
+++ b/shop.css
@@ -65,6 +65,8 @@ border-bottom: 1PX solid black;
 margin-right:1.5em;
 padding-bottom: 10px;
 margin-top:10px;
+display:flex;
+align-items: center;
 }
 
 .cart-row{
@@ -79,8 +81,76 @@ width:45%;
 
 .cart-price{
 width: 20%;
+font-size: 1.2em;
 }
 
 .cart-quantity{
 width: 35%;
+}
+
+.cart-item-title{
+  margin-left: 0.5em;
+  font-size:1.2em;
+}
+
+.cart-item-img{
+  width: 75px;
+  height:auto;
+  border-radius: 15px;
+  border: 1px solid #fff;
+}
+
+.btn-danger{
+  border:none;
+  border-radius: 5px;
+  font-weight:bold;
+}
+
+.btn-danger:hover{
+  background-color: rgb(153, 33, 12);
+  color:#262626;
+}
+
+.quantity-input{
+  height:34px;
+  width: 50px;
+  border-radius: 5px;
+  border:1px solid;
+  background-color: azure;
+  padding:0;
+  text-align: center;
+  font-size: 1.2em;
+  margin-right: 25px;;
+}
+
+.cart-total{
+  text-align: end;
+  margin-top: 10px;
+  margin-right: 10px;
+
+}
+.cart-total-title{
+  font-weight: bold;
+  font-size: 1.75em;
+  margin-right: 25px;
+}
+
+.cart-total-price{
+  color: #262626;
+  font-size: 1.1em;
+  margin-right: 20px;
+}
+
+.btn-purchase{
+  display: block;
+  margin: 40px auto 80px auto;
+  font-size: 2.50em;
+
+}
+
+
+/*Footer Section*/
+footer{
+  background-color: #262626;
+  color: #fff;
 }
