shop.js commits

--- a/shop.css
+++ b/shop.css
@@ -147,6 +147,11 @@ width: 35%;
   font-size: 2.50em;
 
 }
+ .cart-btn:hover{
+  background-color: rgb(226, 230, 255);
+  color:#262626;
+ 
+ }
 
 
 /*Footer Section*/
