--- a/shop.css
+++ b/shop.css
@@ -76,7 +76,23 @@ font-weight: bold;
 font-size: 1.2em;
 }
 
+.content-row {
+  margin-right:1.5em;
+  padding-bottom: 10px;
+  margin:20px;
+  display:flex;
+  align-items: center;
+}
+
 .cart-column{
+    border-bottom: 1PX solid black;
+    margin-right:1.5em;
+    padding-bottom: 10px;
+    margin-top:10px;
+    display:flex;
+    align-items: center;
+}
+.cart{
 border-bottom: 1PX solid black;
 margin-right:1.5em;
 padding-bottom: 10px;
@@ -153,7 +169,8 @@ width: 35%;
 
 .cart-total-price{
   color: #262626;
-  font-size: 1.1em;
+  font-size: 1.3em;
+  font-weight: bold;
   margin-right: 20px;
 }
 
@@ -161,6 +178,9 @@ width: 35%;
   display: block;
   margin: 40px auto 80px auto;
   font-size: 2.50em;
+  font-family: "Sedan", serif;
+  font-weight: 400;
+  font-style: normal;
 
 }
  .cart-btn:hover{
@@ -182,16 +202,17 @@ footer  a{
 }
 
 /*Checkout Section*/
-.checkout-container{
+.header-container{
   display:flex;
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
   margin: 10px;
+  padding-top: 10px;
 }
 
-.checkout-container h2{
+.header-container h2{
   font-size: 100px;;
   text-align: center;
   font-weight: 400;
