--- a/episode-list.css
+++ b/episode-list.css
@@ -18,7 +18,7 @@
   }
   
 body{
-background-color: rgba(225, 190, 231);
+background-color: whitesmoke;
 height: 70vh;
 }
 
@@ -32,7 +32,7 @@ width: 100%;
 }
 
 .accent-div{
-background-color:whitesmoke;
+background-color:rgb(176, 57, 232);
 text-decoration:hidden;
 margin:0;
 padding:2px;
@@ -71,6 +71,7 @@ padding:2px;
 
 .filter-wrapper{
   display: flex;
+  flex-wrap: wrap;
   list-style-type: none;
 }
 
@@ -83,14 +84,14 @@ padding:2px;
   text-decoration:none;
   color:#262626;
   padding:0.5rem 1rem;
-  background-color: whitesmoke;
+  background-color: rgb(176, 57, 232);
   border-radius: 5px;
   font-weight: bold;
 }
 
 .filter-wrapper li a:hover{
-  background-color: rgba(225, 190, 231);
-  color:#262626;
+  background-color: rgb(176, 57, 232);
+  color:whitesmoke;
 }
 
 
@@ -108,7 +109,7 @@ padding:2px;
   right: 0;
   padding: 0.40rem ;
   border: none;
-  background-color: rgba(225, 190, 231);
+  background-color: rgb(176, 57, 232);
   border-radius: 0px 5px 5px 0px;
   cursor: pointer;
   outline: none;
