--- a/shop.css
+++ b/shop.css
@@ -19,7 +19,7 @@
 }
 
 body{
-background-color: rgba(225, 190, 231);
+background-color: whitesmoke;
 height: 70vh;
 }
 
@@ -32,7 +32,7 @@ justify-content: end;
 width: 100%;
 }
 .accent-div{
-background-color:whitesmoke;
+background-color:rgb(176, 57, 232);
 text-decoration:hidden;
 margin:0;
 padding:2px;
@@ -181,12 +181,24 @@ width: 35%;
   font-family: "Sedan", serif;
   font-weight: 400;
   font-style: normal;
-
+  background-color:rgb(176, 57, 232) ;
 }
- .cart-btn:hover{
-  background-color: rgb(226, 230, 255);
+
+.btn-purchase:hover{
+  background-color: rgb(106, 240, 240);
   color:#262626;
- 
+  border:1px solid #262626;
+ }
+.cart-btn{
+  background-color:rgb(176, 57, 232) ;
+  color:#262626;
+  border: none;
+  border-radius: 5px;
+}
+
+ .cart-btn:hover{
+  background-color: rgb(106, 240, 240);
+  color:#262626;
  }
 
 
